# a-maze-ing

./: .envrc  .gitignore  LICENSE  Makefile  README.md  a_maze_ing.py  config_parser.py  default_config.txt  flake.nix  pyproject.toml
src/: config_parser.py  models.py  parser.py
tests/: test_config_parser.py  test_parser.py
